# telink_zigbee_ble_concurrent_sdk

.github/workflows/: Telink_TL32_CMake_Build.yml
apps/common/: factory_reset.h
apps/sampleLight_concurrent/: app_cfg.h  concurrent_main.c  sampleLightCtrl.c  zcl_colorCtrlCb.c  zcl_levelCb.c  zcl_onOffCb.c  zcl_sceneCb.c
apps/samplePlug_concurrent/: samplePlugCtrl.c  samplePlugEpCfg2.c  zcl_onOffCb.c
ikea_light_project/lighting_cbb/bsp/common/: lds_driver_common.h
ikea_light_project/lighting_cbb/components/lds_power_on_count/: README
ikea_light_project/lighting_cbb/driver/kp18056driver/: lds_i2c_kp18056.h
ikea_light_project/lighting_cbb/driver/kp18057driver/: lds_i2c_kp18057.h
ikea_light_project/telink_zigbee_ble_concurrent_sdk/apps/sampleLight_concurrent/: zcl_colorCtrlCb.c
ikea_light_project/telink_zigbee_ble_concurrent_sdk/lds_doc/: TLSR9268J_NTC换算.xls
ikea_light_project/telink_zigbee_ble_concurrent_sdk/proj/drivers/: drv_nv.h
ikea_light_project/telink_zigbee_ble_concurrent_sdk/proj/os/: ev_rtc.c
lighting_cbb/bsp/common/: lds_system_common.h
lighting_cbb/bsp/tlsr92x/common/: lds_attribute_wrappers.h  lds_ble_advertise.h  lds_module_test.h
lighting_cbb/bsp/tlsr92x/config/: lds_includes.h
lighting_cbb/bsp/tlsr92x/hal/: lds_device_i2c.h  lds_device_pwm.h  lds_flash_remember.h  lds_task_output.h
lighting_cbb/bsp/tlsr92x/osal/: xosal_timer.h
lighting_cbb/components/lds_cluster_utility/inc/: lds_color_utility.h
lighting_cbb/components/lds_color_algorithm/inc/: lds_color_algorithm_config.h  lds_color_rendering.h
lighting_cbb/components/lds_color_conversion/inc/: lds_color_conversion.h
lighting_cbb/components/lds_light_trf/inc/: lds_trf.h
lighting_cbb/toolbox/include/: lds_attribute_ids.h  lds_attribute_types.h  lds_cluster_ids.h  lds_error_codes.h
lighting_cbb/tools/cmds/unittest/: CMakeLists.txt  README.md
platform/services/b95/: irq_handler.c
stack/zigbee/zcl/: zcl_config.h
telink_zigbee_ble_concurrent_sdk/: readme.txt
telink_zigbee_ble_concurrent_sdk/apps/sampleLight_concurrent/: private.h  sampleLightCtrl.c
telink_zigbee_ble_concurrent_sdk/apps/samplePlug_concurrent/: private.c  samplePlug.c  samplePlugBLE.c  samplePlugCtrl.h  zcl_colorCtrlCb.c  zcl_levelCb.c
telink_zigbee_ble_concurrent_sdk_20241217/apps/sampleLight_concurrent/: private.c  sampleLightCtrl.h  sampleLightEpCfg.c  zcl_levelCb.c
telink_zigbee_ble_concurrent_sdk_20241217/apps/samplePlug_concurrent/: app_cfg.h  board_b92_S-LDT63S000A.h  private.h  samplePlugEpCfg.c
(+57 files in other folders)
